--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Workout Planner</title>
+    <title>Get Healthier</title>
     <link rel="stylesheet" href="styles.css">
   </head>
   
   <body>
-	<header><a href="./index.html">Workout Planner</a></header>
+	<header><a href="./index.html">Get Healthier</a></header>
 	<section>
-		<div>This workout planner focus on specified body part enhancement training</div>
+		<div>Health is the greatest possesion</div>
 		<button onClick="bmiCalculator()">BMI Calculator</button>
 		<button onClick="generalWorkout()">General Workout</button>
 	</section>
